Import Local Site
Adding the version of my site I've been working on for a while now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,189 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+  <title>HOME - Leon Photos</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<table>
+  
+	<tr>
+	  <th align="left" width="350px">
+		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="150px" id="Logo"></a>	
+		  </th>
+	<td rowspan="2"> 
+		  <div id="slideshow">
+         <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
+      </div>
+	</td>
+ </tr>
+	<td>
+
+<nav valign="top">
+    <p><br> CONTENTS <br></p>
+    <ul>
+      <li><a href="Index.html">Home</a></li>
+    </ul>
+
+     <ul id="dropdown">
+      <li><span class="caret">PROJECTS</span>
+        <ul class="nested">
+  
+          <li><span class="caret">2023</span>
+            <ul class="nested">
+              <li hidden><a href="#">#</a></li>
+              <li hidden><a href="#">#</a></li>
+              <li><a href="2023_Lancaster.html">Lancaster 2023</a></li>
+            </ul>
+  
+          <li><span class="caret">2022</span>
+            <ul class="nested">
+              <li><a href="2022_Abbey.html">Abbey Tap House 1. 2 & 3</a></li>
+              <li><a href="2022_Lancaster.html">Lancaster: Objects, Textures, Tags</a></li>
+              <li><a href="2022_Manchester.html">Unreleased: Adidas Moss-Side</a></li>
+            </ul>
+  
+          <li><span class="caret">2021</span>
+            <ul class="nested">
+              <li><a href="2021_Mallorca.html">Mallorca 2021</a></li>
+              <li><a href="2021_Morecambe.html">Morecambe Bay</a></li>
+              <li><a href="2021_Lancaster.html">Streets of Lancaster</a></li>
+              <li hidden><a href="2021_Manchester.html">Manchester</a></li>
+              <li hidden><a href="2021_Glasgow.html">Glasgow</a></li>
+            </ul>
+  
+          <li><span class="caret">2020</span>
+            <ul class="nested">
+              <li><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
+              <li><a href="2020_NHNT.html">Neither Here Nor There</a></li>
+              <li><a href="2020_Designs.html">Designs for another time</a></li>
+            </ul>
+  
+          <li><span class="caret">2019</span>
+            <ul class="nested">
+              <li><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
+              <li><a href="2019_Morecambe.html">Life In Morecambe</a></li>
+              <li><a href="2019_DM.html">The Decisive Moment</a></li>
+              <li><a href="2019_Chun.html">Chunian Portraiture</a></li>
+            </ul>
+  
+          </li>
+        </ul>
+  
+        <ul id="dropdown">
+          <li><span class="caret">SELECTED COMMISSIONS</span>
+            <ul class="nested">
+  
+              <li><span class="caret">Saintleamon</span>
+                <ul class="nested">
+                  <li><a href="#">#</a></li>
+                  <li hidden><a href="#">#</a></li>
+                  <li hidden><a href="#">#</a></li>
+                  <li><a href="SL_Manny22.html">Bloc2Bloc x S.L Manchester 22</a></li>
+                  <li><a href="SL_Manny21.html">Bloc2Bloc x S.L Manchester 21</a></li>
+                  <li><a href="SL_Manny20.html">Bloc2Bloc x S.L Manchester 20</a></li>
+                  <li><a href="SL_Lanny22.html">S.L Dam Good Lancaster 2022</a></li>
+                  <li><a href="SL_Lanny20.html">S.L Lancaster 2020</a></li>
+                </ul>
+  
+              <li><span class="caret">Monument HiFi</span>
+                <ul class="nested">
+                  <li><a href="Monument_Fine.html">The Sun - FineFest 2022</a></li>
+                  <li><a href="Monument2.html">The Sun - DCUK 3.4.22</a></li>
+                  <li><a href="Monument_Soul.html">SoulBowl Morecambe 17.4.22</a></li>
+                  <li><a href="Monument1.html">The Sun 1.5.22</a></li>
+                  <li><a href="Monument_Trinity.html">Trinity Groove 23.7.22</a></li>
+                </ul>
+  
+              <li><span class="caret">Non-Stop Dutty Bass</span>
+                <ul class="nested">
+                  <li><a href="NSDB1.html">N.S.D.B All Stars 30.9.21</a></li>
+                  <li><a href="NSDB2.html">N.S.D.B Glow 12.8.21</a></li>
+                  <li><a href="NSDB3.html">N.S.D.B Valentine's Special 11.2.22</a></li>
+                </ul>
+  
+              <li hidden><span class="caret">Music Videos</span>
+                <ul class="nested">
+                  <li><a href="Ghost.html">LA1 COLLECTIVE - Ghost</a></li>
+                  <li><a href="GLD.html">T.LEE - Gassed Like Dah</a></li>
+                  <li><a href="TheQuestion.html">T.LEE - The Question</a></li>
+                </ul>
+  
+              <li><a href="Calliebirb2421.html">Calliebirb 02.04.21</a></li>
+              <li><a href="Isaac9421.html">Isaac 09.04.21</a></li>
+              <li><a href="Wedding_Samples.html">Wedding Samples (2021-)</a></li>
+            </ul>
+        </li>
+        </ul>
+    </ul>
+    <ul id="dropdown">
+      <li><span class="caret">CONTACT ME</span>
+        <ul class="nested">
+          <li><a href="http://www.instagram.com/le.on_photos">Instagram</a></li>
+          <li><a href="https://www.youtube.com/channel/UCnFDM1ANjvW8WHgOWjKnncw">YouTube </a></li>
+          <li><a href="https://linktr.ee/newplace2frown">Linktree</a></li>
+          <li><a href="https://twitter.com/NewPlace2Frown">Twitter</a></li>
+          <li><a href="https://www.patreon.com/NewPlace2Frown">Patreon</a></li>
+        </ul>
+      </li>
+      </li>
+    </ul>
+  </nav>
+	</td>
+</table>
 </body>
+
+<script>
+
+const slideshow = document.getElementById("slideshow");
+const photo = document.getElementById("photo");
+
+const photos = [];
+for (let i = 1; i <= 135; i++) {
+  let num = i.toString().padStart(3, '0');
+  let filePath = `Media/Home/Photo${num}.jpeg`;
+  photos.push(filePath);
+}
+
+let currentPhoto = 0;
+photo.src = photos[currentPhoto];
+
+function nextPhoto() {
+  currentPhoto = (currentPhoto + 1) % photos.length;
+  photo.src = photos[currentPhoto];
+}
+
+function prevPhoto() {
+  currentPhoto = (currentPhoto - 1 + photos.length) % photos.length;
+  photo.src = photos[currentPhoto];
+}
+
+slideshow.addEventListener("click", nextPhoto);
+
+window.addEventListener("keydown", function(event) {
+  switch(event.keyCode) {
+    case 37: // Left arrow
+      prevPhoto();
+      break;
+    case 39: // Right arrow
+      nextPhoto();
+      break;
+  }
+});
+
+var toggler = document.getElementsByClassName("caret");
+var i;
+
+for (i = 0; i < toggler.length; i++) {
+  toggler[i].addEventListener("click", function() {
+    this.parentElement.querySelector(".nested").classList.toggle("active");
+    this.classList.toggle("caret-down");
+  });
+}
+
+
+  </script>
 </html>
