fix issues with ref within index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		  </th>
 	<td rowspan="2"> 
 		  <div id="slideshow">
-         <img src="Media/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
+         <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
       </div>
 	</td>
  </tr>
@@ -144,7 +144,7 @@ const photo = document.getElementById("photo");
 const photos = [];
 for (let i = 1; i <= 135; i++) {
   let num = i.toString().padStart(3, '0');
-  let filePath = `Media/Photo${num}.jpeg`;
+  let filePath = `Media/Home/Photo${num}.jpeg`;
   photos.push(filePath);
 }
 
