--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <title>HOME - Leon Photos</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 
 </head>
 <body>
