--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <title>HOME - Leon Photos</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">  
   <link rel="stylesheet" href="Style.css">
 
 </head>
