--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<tr>
 	  <th align="left" width="350px">
 		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="150px" id="Logo"></a>	
+          <br> Hi and welcome to my website! 
 		  </th>
 	<td rowspan="2"> 
 		  <div id="slideshow">
@@ -24,6 +25,7 @@
 	<td>
 
 <nav valign="top">
+
     <p><br> CONTENTS <br></p>
     <ul>
       <li><a href="Index.html">Home</a></li>
