--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   
 	<tr>
 	  <th align="left" width="350px">
-		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="150px" id="Logo"></a>	
-          <br> Hi and welcome to my website! 
+		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="300px" id="Logo"></a>	
+          <br> Made by Leon Patrick Morgan <br> 
 		  </th>
 	<td rowspan="2"> 
 		  <div id="slideshow">
