Organise Nav & improve links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<tr>
 	  <th align="left" width="350px">
 		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
-          <br> Made by Leon Patrick Morgan <br> 
+          <br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click
 		  </th>
 	<td rowspan="2"> 
 		  <div id="slideshow">
@@ -29,6 +29,7 @@
     <p><br> CONTENTS <br></p>
     <ul>
       <li><a href="Index.html">Home</a></li>
+      <li><a href="https://newplace2frown.myshopify.com">Shop</a></li>
     </ul>
 
      <ul id="dropdown">
@@ -88,44 +89,24 @@
           <li><span class="caret">SELECTED COMMISSIONS</span>
             <ul class="nested">
   
-              <li><span class="caret">Saintleamon</span>
+                <li><a href="SL.html">Saintleamon</a></li>
+                <li><a href="MonHi.html">Monument Hifi</a></li>
+                <li><a href="NSDB.html">Non-Stop Dutty Bass</a></li>
+                <li><a href="Calliebirb.html">Calliebirb 02.04.21</a></li>
+                <li><a href="Isaac.html">Isaac 09.04.21</a></li>
+                <li><a href="Wedding_Samples.html">Wedding Samples (2021-)</a></li>
+
+            </ul>
+          </li>
+
+              <li><span class="caret">MUSIC VIDEOS</span>
                 <ul class="nested">
-                  <li><a href="#">#</a></li>
-                  <li hidden><a href="#">#</a></li>
-                  <li hidden><a href="#">#</a></li>
-                  <li><a href="SL_Manny22.html">Bloc2Bloc x S.L Manchester 22</a></li>
-                  <li><a href="SL_Manny21.html">Bloc2Bloc x S.L Manchester 21</a></li>
-                  <li><a href="SL_Manny20.html">Bloc2Bloc x S.L Manchester 20</a></li>
-                  <li><a href="SL_Lanny22.html">S.L Dam Good Lancaster 2022</a></li>
-                  <li><a href="SL_Lanny20.html">S.L Lancaster 2020</a></li>
+                  <li><a href="https://youtu.be/NqbH4AaP2LU">LA1 COLLECTIVE - Ghost</a></li>
+                  <li><a href="https://youtu.be/SHtKtRB2nag">T.LEE - Gassed Like Dah</a></li>
+                  <li><a href="https://youtu.be/ehMHD5lm7eI">T.LEE - The Question</a></li>
                 </ul>
   
-              <li><span class="caret">Monument HiFi</span>
-                <ul class="nested">
-                  <li><a href="Monument_Fine.html">The Sun - FineFest 2022</a></li>
-                  <li><a href="Monument2.html">The Sun - DCUK 3.4.22</a></li>
-                  <li><a href="Monument_Soul.html">SoulBowl Morecambe 17.4.22</a></li>
-                  <li><a href="Monument1.html">The Sun 1.5.22</a></li>
-                  <li><a href="Monument_Trinity.html">Trinity Groove 23.7.22</a></li>
-                </ul>
-  
-              <li><span class="caret">Non-Stop Dutty Bass</span>
-                <ul class="nested">
-                  <li><a href="NSDB1.html">N.S.D.B All Stars 30.9.21</a></li>
-                  <li><a href="NSDB2.html">N.S.D.B Glow 12.8.21</a></li>
-                  <li><a href="NSDB3.html">N.S.D.B Valentine's Special 11.2.22</a></li>
-                </ul>
-  
-              <li hidden><span class="caret">Music Videos</span>
-                <ul class="nested">
-                  <li><a href="Ghost.html">LA1 COLLECTIVE - Ghost</a></li>
-                  <li><a href="GLD.html">T.LEE - Gassed Like Dah</a></li>
-                  <li><a href="TheQuestion.html">T.LEE - The Question</a></li>
-                </ul>
-  
-              <li><a href="Calliebirb2421.html">Calliebirb 02.04.21</a></li>
-              <li><a href="Isaac9421.html">Isaac 09.04.21</a></li>
-              <li><a href="Wedding_Samples.html">Wedding Samples (2021-)</a></li>
+
             </ul>
         </li>
         </ul>
