--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<tr>
 	  <th align="left" width="350px">
 		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
-          <br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click
+          <br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click.
+
 		  </th>
 	<td rowspan="2"> 
 		  <div id="slideshow">
