Wasted an hour trying to create about me, ended up using docs

--- a/About.html
+++ b/About.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 
-  <title>HOME - NewPlace2Frown</title>
+  <title>About Me - NewPlace2Frown</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">  
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="about.css">
 
 </head>
 <body>
@@ -14,14 +14,19 @@
 	<tr>
 	  <th align="left" width="350px">
 		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
-          <br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. 
+          <br> Made by Leon Patrick Morgan.
 
 
 		  </th>
-	<td rowspan="2"> 
-		  <div id="slideshow">
-         <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
-      </div>
+	<td rowspan="1"> 
+        <div class="about-image-container">
+           <a href="https://instagram.com/le.on_photos">  <img id="aboutImage" src="" alt="About Image" /></a>
+          </div>
+          <td width="700px"> 
+            <div class="about-image-container2">
+            <img src="Media/About/AboutMe.jpg"> 
+          </td>  
+        </div>
 	</td>
  </tr>
 	<td>
@@ -32,8 +37,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="https://newplace2frown.myshopify.com">Shop</a></li>
-      <li><a href="https://docs.google.com/document/d/11QvEfM6O2GNp7RlLfQz_ajvZM6Lw-ht_jjcX2RwSo-U/edit?usp=sharing">About Me</a></li>
-      <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a></li>
+      <li><a href="About.html">About Me</a></li>
+      <li hidden> <a href="#" id="pauseLink">Pause Slideshow (10s)</a></li>
     </ul>
 
      <ul id="dropdown">
@@ -137,7 +142,7 @@
 	</td>
 </table>
 
-<script src="Home.js"></script>
+<script src="About.js"></script>
 </body>
 
 
