--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 	<tr>
 	  <th align="left" width="350px">
-		  <a href="Index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
+		  <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
           <br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. 
 
 
@@ -33,7 +33,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="https://newplace2frown.myshopify.com">Shop</a></li>
       <li><a href="https://docs.google.com/document/d/11QvEfM6O2GNp7RlLfQz_ajvZM6Lw-ht_jjcX2RwSo-U/edit?usp=sharing">About Me</a></li>
-      <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a></li>
+      <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a> </li>
     </ul>
 
      <ul id="dropdown">
