--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
   <title>HOME - NewPlace2Frown</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/ico">
-  <link rel="icon" href="favicon.ico" type="image/ico">  
+  <link rel="shortcut icon" type="image/gif" href="favicon.gif">
+  <link rel="icon" type="image/gif" href="favicon.gif">  
   <link rel="stylesheet" href="Style.css">
 
 </head>
