--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<tr>
 	  <th align="left" width="350px">
 		  <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
-          <br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. 
+          <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1>
 
 
 		  </th>
@@ -30,7 +30,7 @@
 
     <p><br> CONTENTS <br></p>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="https://www.newplace2frown.com">Home</a></li>
       <li><a href="https://newplace2frown.myshopify.com">Shop</a></li>
       <li><a href="https://docs.google.com/document/d/11QvEfM6O2GNp7RlLfQz_ajvZM6Lw-ht_jjcX2RwSo-U/edit?usp=sharing">About Me</a></li>
       <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a> </li>
