--- a/2019_DM.html
+++ b/2019_DM.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Neither Here Nor There - NewPlace2Frown</title>
+  <title>The Decisive Moment - NewPlace2Frown</title>
   <link rel="shortcut icon" type="image/gif" href="favicon.gif">
   <link rel="icon" type="image/gif" href="favicon.gif">  
   <link rel="stylesheet" href="Style.css">
@@ -20,7 +20,7 @@
 		  </th>
 	<td rowspan="2"> 
 		  <div id="slideshow">
-         <img src="Media/Gallery/2020_NHNT.html/Photo001.jpeg" alt="Images from 2020 in Cardiff" id="photo">
+         <img src="Media/Gallery/2019_DM/Photo001.jpeg" alt="Images from 2019 in Lancaster" id="photo">
       </div>
 	</td>
  </tr>
@@ -66,7 +66,7 @@
               <li hidden><a href="2021_Glasgow.html">Glasgow</a></li>
             </ul>
   
-          <li><span class="caret">2020</span>
+          <li ><span class="caret">2020</span>
             <ul class="nested">
               <li hidden><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
               <li><a href="2020_NHNT.html">Neither Here Nor There</a></li>
