--- a/index.html
+++ b/index.html
@@ -39,49 +39,46 @@
      <ul id="dropdown">
       <li><span class="caret">PROJECTS</span>
         <ul class="nested">
-  
 
-
-
-          <li><span class="caret">2023</span>
+          <li hidden><span class="caret">2023</span>
             <ul class="nested">
               <li hidden><a href="#">#</a></li>
               <li hidden><a href="#">#</a></li>
               <li><a href="2023_Lancaster.html">Lancaster 2023</a></li>
             </ul>
   
-          <li><span class="caret">2022</span>
+          <li hidden><span class="caret">2022</span>
             <ul class="nested">
               <li><a href="2022_Abbey.html">Abbey Tap House 1. 2 & 3</a></li>
               <li><a href="2022_Lancaster.html">Lancaster: Objects, Textures, Tags</a></li>
               <li><a href="2022_Manchester.html">Unreleased: Adidas Moss-Side</a></li>
             </ul>
   
-          <li><span class="caret">2021</span>
+          <li hidden><span class="caret">2021</span>
             <ul class="nested">
               <li><a href="2021_Mallorca.html">Mallorca 2021</a></li>
               <li><a href="2021_Morecambe.html">Morecambe Bay</a></li>
               <li><a href="2021_Lancaster.html">Streets of Lancaster</a></li>
-              <li hidden><a href="2021_Manchester.html">Manchester</a></li>
-              <li hidden><a href="2021_Glasgow.html">Glasgow</a></li>
+              <li><a href="2021_Manchester.html">Manchester</a></li>
+              <li><a href="2021_Glasgow.html">Glasgow</a></li>
             </ul>
   
           <li><span class="caret">2020</span>
             <ul class="nested">
-              <li><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
+              <li hidden><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
               <li><a href="2020_NHNT.html">Neither Here Nor There</a></li>
-              <li><a href="2020_Designs.html">Designs for another time</a></li>
+              <li hidden><a href="2020_Designs.html">Designs for another time</a></li>
             </ul>
   
           <li><span class="caret">2019</span>
             <ul class="nested">
-              <li><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
-              <li><a href="2019_Morecambe.html">Life In Morecambe</a></li>
+              <li hidden><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
+              <li hidden><a href="2019_Morecambe.html">Life In Morecambe</a></li>
               <li><a href="2019_DM.html">The Decisive Moment</a></li>
-              <li><a href="2019_Chun.html">Chunian Portraiture</a></li>
+              <li hidden><a href="2019_Chun.html">Chunian Portraiture</a></li>
             </ul>
   
-            <li><span class="caret">ONGOING</span>
+            <li hidden><span class="caret">ONGOING</span>
                 <ul class="nested">
                   <li hidden><a href="#">#</a></li>
                   <li hidden><a href="#">#</a></li>
