--- a/nav.html
+++ b/nav.html
@@ -1,31 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-  <title>Neither Here Nor There - NewPlace2Frown</title>
-  <link rel="shortcut icon" type="image/gif" href="favicon.gif">
-  <link rel="icon" type="image/gif" href="favicon.gif">  
-  <link rel="stylesheet" href="Style.css">
-
-</head>
-<body>
-<table>
-  
-	<tr>
-	  <th align="left" width="350px">
-		  <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
-          <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1>
-
-
-		  </th>
-	<td rowspan="2"> 
-		  <div id="slideshow">
-         <img src="Media/Gallery/2020_NHNT.html/Photo001.jpeg" alt="Images from 2020 in Cardiff" id="photo">
-      </div>
-	</td>
- </tr>
-	<td>
-
 <nav valign="top">
 
     <p><br> CONTENTS <br></p>
@@ -39,9 +11,6 @@
      <ul id="dropdown">
       <li><span class="caret">PROJECTS</span>
         <ul class="nested">
-  
-
-
 
           <li hidden><span class="caret">2023</span>
             <ul class="nested">
@@ -62,8 +31,8 @@
               <li><a href="2021_Mallorca.html">Mallorca 2021</a></li>
               <li><a href="2021_Morecambe.html">Morecambe Bay</a></li>
               <li><a href="2021_Lancaster.html">Streets of Lancaster</a></li>
-              <li hidden><a href="2021_Manchester.html">Manchester</a></li>
-              <li hidden><a href="2021_Glasgow.html">Glasgow</a></li>
+              <li><a href="2021_Manchester.html">Manchester</a></li>
+              <li><a href="2021_Glasgow.html">Glasgow</a></li>
             </ul>
   
           <li><span class="caret">2020</span>
@@ -75,10 +44,10 @@
   
           <li><span class="caret">2019</span>
             <ul class="nested">
-              <li><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
-              <li><a href="2019_Morecambe.html">Life In Morecambe</a></li>
+              <li hidden><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
+              <li hidden><a href="2019_Morecambe.html">Life In Morecambe</a></li>
               <li><a href="2019_DM.html">The Decisive Moment</a></li>
-              <li><a href="2019_Chun.html">Chunian Portraiture</a></li>
+              <li hidden><a href="2019_Chun.html">Chunian Portraiture</a></li>
             </ul>
   
             <li hidden><span class="caret">ONGOING</span>
@@ -134,11 +103,3 @@
        
       </ul>
   </nav>
-	</td>
-</table>
-
-<script src="Gallery.js"></script>
-</body>
-
-
-</html>
