--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
   <link rel="shortcut icon" type="image/gif" href="favicon.gif">
   <link rel="icon" type="image/gif" href="favicon.gif">  
   <link rel="stylesheet" href="Style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
 <table>
-  
 	<tr>
+
+<!-- Logo -->    
+
 	  <th align="left" width="350px">
 		  <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
           <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1>
-
-
 		  </th>
+
+<!-- slideshow -->
+
 	<td rowspan="2"> 
 		  <div id="slideshow">
          <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
@@ -26,116 +30,12 @@
  </tr>
 	<td>
 
-<nav valign="top">
+<!-- Will be replaced by the actual navigation -->
 
-    <p><br> CONTENTS <br></p>
-    <ul>
-      <li><a href="https://www.newplace2frown.com">Home</a></li>
-      <li><a href="https://newplace2frown.myshopify.com">Shop</a></li>
-      <li><a href="https://docs.google.com/document/d/11QvEfM6O2GNp7RlLfQz_ajvZM6Lw-ht_jjcX2RwSo-U/edit?usp=sharing">About Me</a></li>
-      <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a> </li>
-    </ul>
+<div id="navigation-placeholder"> </div>
 
-     <ul id="dropdown">
-      <li><span class="caret">PROJECTS</span>
-        <ul class="nested">
-
-          <li hidden><span class="caret">2023</span>
-            <ul class="nested">
-              <li hidden><a href="#">#</a></li>
-              <li hidden><a href="#">#</a></li>
-              <li><a href="2023_Lancaster.html">Lancaster 2023</a></li>
-            </ul>
-  
-          <li hidden><span class="caret">2022</span>
-            <ul class="nested">
-              <li><a href="2022_Abbey.html">Abbey Tap House 1. 2 & 3</a></li>
-              <li><a href="2022_Lancaster.html">Lancaster: Objects, Textures, Tags</a></li>
-              <li><a href="2022_Manchester.html">Unreleased: Adidas Moss-Side</a></li>
-            </ul>
-  
-          <li hidden><span class="caret">2021</span>
-            <ul class="nested">
-              <li><a href="2021_Mallorca.html">Mallorca 2021</a></li>
-              <li><a href="2021_Morecambe.html">Morecambe Bay</a></li>
-              <li><a href="2021_Lancaster.html">Streets of Lancaster</a></li>
-              <li><a href="2021_Manchester.html">Manchester</a></li>
-              <li><a href="2021_Glasgow.html">Glasgow</a></li>
-            </ul>
-  
-          <li><span class="caret">2020</span>
-            <ul class="nested">
-              <li hidden><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
-              <li><a href="2020_NHNT.html">Neither Here Nor There</a></li>
-              <li hidden><a href="2020_Designs.html">Designs for another time</a></li>
-            </ul>
-  
-          <li><span class="caret">2019</span>
-            <ul class="nested">
-              <li hidden><a href="2019_Gambia.html">Kunta Kinteh Island, Gambia</a> </li>
-              <li hidden><a href="2019_Morecambe.html">Life In Morecambe</a></li>
-              <li><a href="2019_DM.html">The Decisive Moment</a></li>
-              <li hidden><a href="2019_Chun.html">Chunian Portraiture</a></li>
-            </ul>
-  
-            <li hidden><span class="caret">ONGOING</span>
-                <ul class="nested">
-                  <li hidden><a href="#">#</a></li>
-                  <li hidden><a href="#">#</a></li>
-                  <li><a href="Gambia.html">Gambia 2019-</a></li>
-                </ul>
-
-          </li>
-        </ul>
-  
-        <ul id="dropdown">
-          <li><span class="caret">SELECTED COMMISSIONS</span>
-            <ul class="nested">
-  
-                <li><a href="SL.html">Saintleamon</a></li>
-                <li><a href="MonHi.html">Monument Hifi</a></li>
-                <li><a href="NSDB.html">Non-Stop Dutty Bass</a></li>
-                <li><a href="Calliebirb.html">Calliebirb 02.04.21</a></li>
-                <li><a href="Isaac.html">Isaac 09.04.21</a></li>
-                <li><a href="Wedding_Samples.html">Wedding Samples (2021-)</a></li>
-
-            </ul>
-          </li>
-
-              <li><span class="caret">MUSIC VIDEOS</span>
-                <ul class="nested">
-                  <li><a href="https://youtu.be/NqbH4AaP2LU">LA1 COLLECTIVE - Ghost</a></li>
-                  <li><a href="https://youtu.be/SHtKtRB2nag">T.LEE - Gassed Like Dah</a></li>
-                  <li><a href="https://youtu.be/ehMHD5lm7eI">T.LEE - The Question</a></li>
-                </ul>
-  
-
-            </ul>
-        </li>
-        </ul>
-    </ul>
-    <ul id="dropdown">
-      <li><span class="caret">CONTACT ME</span>
-        <ul class="nested">
-          <li><a href="http://www.instagram.com/le.on_photos">Instagram</a></li>
-          <li><a href="https://www.youtube.com/channel/UCnFDM1ANjvW8WHgOWjKnncw">YouTube </a></li>
-          <li><a href="https://linktr.ee/newplace2frown">Linktree</a></li>
-          <li><a href="https://twitter.com/NewPlace2Frown">Twitter</a></li>
-          <li><a href="https://www.patreon.com/NewPlace2Frown">Patreon</a></li>
-        </ul>
-      </li>
-      </li>
-    </ul>
-    <ul>
-        <li><a href="License">License</a></li>
-       
-      </ul>
-  </nav>
 	</td>
 </table>
-
 <script src="Home.js"></script>
 </body>
-
-
 </html>
