putting logo in its own html init by js

--- a/index.html
+++ b/index.html
@@ -10,32 +10,22 @@
 
 </head>
 <body>
-<table>
-	<tr>
+    <div class="container">
+        <!-- Logo -->    
 
-<!-- Logo -->    
+        <div id="logo-placeholder"></div>
 
-	  <th align="left" width="350px">
-		  <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"></a>	
-          <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1>
-		  </th>
+        <!-- slideshow -->
+        <div class="slideshow-container">
+            <div id="slideshow">
+                <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
+            </div>
+        </div>
 
-<!-- slideshow -->
-
-	<td rowspan="2"> 
-		  <div id="slideshow">
-         <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
-      </div>
-	</td>
- </tr>
-	<td>
-
-<!-- Will be replaced by the actual navigation -->
-
-<div id="navigation-placeholder"> </div>
-
-	</td>
-</table>
+        <!-- Will be replaced by the actual navigation -->
+        <div id="navigation-placeholder"></div>
+    </div>
 <script src="Home.js"></script>
 </body>
+
 </html>
