--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   <div class="page">
     <div class="sidebar">
       <div class="logo-section">
-        <div id="logo-placeholder"></div>
+        <div class="sidebar">
+            <div class="logo-section">
+              <a href="index.html">
+                <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo">
+              </a>
+              <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1>
+            </div>
       </div>
         
 
