--- a/nav.html
+++ b/nav.html
@@ -100,7 +100,7 @@
       </li>
     </ul>
     <ul>
-        <li><a href="License">License</a></li>
+        <li><a href="License.txt">License</a></li>
        
       </ul>
   </nav>
