--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 
                 <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1> </div>
 
-            <div id="navigation-placeholder"> </div>
-        </div>
+                <div id="navigation-placeholder">
+                    <div id="hamburger">&#9776;</div>
+                    <nav id="navigation"></nav>
+                  </div>
+                  
 
         <div class="slideshow-container">
             <div id="slideshow">
