--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1> </div>
 
                 <div id="navigation-placeholder">
-                    <div id="hamburger"> <button id="hamburger">☰</button>
-                    </div>
+                    <div id="hamburger"> &#9776; </div>
                     <nav id="navigation"></nav>
                   </div>
                   
