Revert "Implement burger for mobile"
This reverts commit a80a5db31d9efc69f087828459d91b0b9584c1b5.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
 
                 <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1> </div>
 
-                <div id="navigation-placeholder">
-                    <div id="hamburger">&#9776;</div>
-                    <nav id="navigation"></nav>
-                  </div>
-                  
+            <div id="navigation-placeholder"> </div>
+        </div>
 
         <div class="slideshow-container">
             <div id="slideshow">
