--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 
 </head>
 <body>
+<div class="page">
+    <div class="sidebar">
+        <div class="logo-section">
 
-    <div class="page">
-        <div class="sidebar">
-            <div class="logo-section">
+            <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"> </a>
 
-                <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"> </a>
-
-                <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click. </h1> </div>
-
-            <div id="navigation-placeholder"> </div>
+            <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or
+                click. </h1>
         </div>
 
-        <div class="slideshow-container">
-            <div id="slideshow">
-                <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
-            </div>
+        <div id="navigation-placeholder"> </div>
+    </div>
+
+    <div class="slideshow-container">
+        <div id="slideshow">
+            <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
         </div>
     </div>
+</div>
 
 <script src="Home.js"></script>
 
