--- a/2019_DM.html
+++ b/2019_DM.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" type="image/gif" href="favicon.gif">
   <link rel="icon" type="image/gif" href="favicon.gif">  
   <link rel="stylesheet" href="Style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
@@ -29,7 +30,6 @@
       </div>
     </div>
   </div>
-
 
 <script src="Gallery.js"></script>
 </body>
