--- a/2019_DM.html
+++ b/2019_DM.html
@@ -26,7 +26,7 @@
   
     <div class="slideshow-container">
       <div id="slideshow">
-        <img src="Media/Gallery/2019_DM/Photo001.jpeg" alt="Images from 2019 in Lancaster" id="photo">
+        <img src="Media/Gallery/2019_DM.html/Photo001.jpeg" alt="Images from 2019 in Lancaster" id="photo">
       </div>
     </div>
   </div>
