--- a/nav.html
+++ b/nav.html
@@ -77,7 +77,7 @@
 <ul>
               <li><span class="caret">MUSIC VIDEOS</span>
                 <ul class="nested">
-                  <li><a href="https://youtu.be/NqbH4AaP2LU">LA1 COLLECTIVE - Ghost</a></li>
+                  <li><a href="Ghost.html">LA1 COLLECTIVE - Ghost</a></li>
                   <li><a href="https://youtu.be/SHtKtRB2nag">T.LEE - Gassed Like Dah</a></li>
                   <li><a href="https://youtu.be/ehMHD5lm7eI">T.LEE - The Question</a></li>
                 </ul>
