--- a/Ghost.html
+++ b/Ghost.html
@@ -25,7 +25,7 @@
   
   
     <div>
-      <div>    <iframe width="560" height="315" src="https://www.youtube.com/embed/NqbH4AaP2LU" title="YouTube video player"
+      <div>    <iframe width="1080" src="https://www.youtube.com/embed/NqbH4AaP2LU" title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>  </div>
