--- a/Ghost.html
+++ b/Ghost.html
@@ -16,7 +16,7 @@
   
         <a href="index.html"> <img src="Media/WebLogo2.gif" alt="LE.ON_PHOTOS logo" width="250px" id="Logo"> </a>
   
-        <h1><br> Made by Leon Patrick Morgan <br> <br> - To move through the gallery <br>use the arrow keys or click.
+        <h1><br> Made by Leon Patrick Morgan 
         </h1>
       </div>
   
