Fix filenames and ref

--- a/2019_Morecambe.html
+++ b/2019_Morecambe.html
@@ -26,7 +26,7 @@
   
     <div class="slideshow-container">
       <div id="slideshow">
-        <img src="Media/Gallery/2019_Morecambe.html/Photo001.jpg" alt="Images from 2019 in Morecambe" id="photo">
+        <img src="Media/Gallery/2019_Morecambe.html/Photo001.jpeg" alt="Images from 2019 in Morecambe" id="photo">
       </div>
     </div>
   </div>
