--- a/Ghost.html
+++ b/Ghost.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>The Decisive Moment - NewPlace2Frown</title>
+  <title>Maddoc - GHOST (Feat. Taran) - NewPlace2Frown</title>
   <link rel="shortcut icon" type="image/gif" href="favicon.gif">
   <link rel="icon" type="image/gif" href="favicon.gif">  
   <link rel="stylesheet" href="Style.css">
