--- a/nav.html
+++ b/nav.html
@@ -37,7 +37,7 @@
   
           <li><span class="caret">2020</span>
             <ul class="nested">
-              <li hidden><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
+              <li><a href="2020_Lancaster.html">All Roads Lead to Lancaster</a></li>
               <li><a href="2020_NHNT.html">Neither Here Nor There</a></li>
               <li hidden><a href="2020_Designs.html">Designs for another time</a></li>
             </ul>
