--- a/nav.html
+++ b/nav.html
@@ -19,11 +19,12 @@
               <li><a href="2023_Lancaster.html">Lancaster 2023</a></li>
             </ul>
   
-          <li hidden><span class="caret">2022</span>
+          <li><span class="caret">2022</span>
             <ul class="nested">
-              <li><a href="2022_Abbey.html">Abbey Tap House 1. 2 & 3</a></li>
-              <li><a href="2022_Lancaster.html">Lancaster: Objects, Textures, Tags</a></li>
+              <li hidden><a href="2022_Abbey.html">Abbey Tap House 1. 2 & 3</a></li>
+              <li hidden><a href="2022_Lancaster.html">Lancaster: Objects, Textures, Tags</a></li>
               <li><a href="2022_Manchester.html">Unreleased: Adidas Moss-Side</a></li>
+              <li hidden><a href="2022_Inexcplicable.html">Zine: INEXPLICABLE</a></li>
             </ul>
   
           <li hidden><span class="caret">2021</span>
