--- a/nav.html
+++ b/nav.html
@@ -92,7 +92,7 @@
       <li><span class="caret">CONTACT ME</span>
         <ul class="nested">
           <li><a href="http://www.instagram.com/le.on_photos">Instagram</a></li>
-          <li><a href="https://www.youtube.com/channel/UCnFDM1ANjvW8WHgOWjKnncw">YouTube </a></li>
+          <li><a href="https://youtube.com/@newplace2frown">YouTube </a></li>
           <li><a href="https://linktr.ee/newplace2frown">Linktree</a></li>
           <li><a href="https://twitter.com/NewPlace2Frown">Twitter</a></li>
           <li><a href="https://www.patreon.com/NewPlace2Frown">Patreon</a></li>
