Added booking.html and nav index

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
       <li><a href="https://www.newplace2frown.com">Home</a></li>
       <li><a href="https://newplace2frown.myshopify.com">Shop</a></li>
       <li><a href="https://docs.google.com/document/d/11QvEfM6O2GNp7RlLfQz_ajvZM6Lw-ht_jjcX2RwSo-U/edit?usp=sharing">About Me</a></li>
-      <li><a href="https://forms.gle/KRFm5CTFHHkhg92U7">Book a shoot!</a></li>
+      <li><a href="Booking.html">Book a shoot!</a></li>
       <li> <a href="#" id="pauseLink">Pause Slideshow (10s)</a> </li>
     </ul>
 
