fixed nav and booking

--- a/Booking.html
+++ b/Booking.html
@@ -19,13 +19,13 @@
             <h1><br> Made by Leon Patrick Morgan <br> <br></h1>
         </div>
 
-        <div id="Booking"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeWYWtWqqDOk9ouAzTrau0kje0EwHVag4TlqI3G4uO-HO4dVw/viewform?embedded=true" width="640" height="1330" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+        <div id="navigation-placeholder"> </div>
     </div>
 
-    <div class="slideshow-container">
-        <div id="slideshow">
-            <img src="Media/Home/Photo001.jpeg" alt="Top Works from the last few years" id="photo">
-        </div>
+    <div class="form-section">
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSeWYWtWqqDOk9ouAzTrau0kje0EwHVag4TlqI3G4uO-HO4dVw/viewform?embedded=true"
+            width="640" height="1330" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 </div>
 
