--- a/Booking.html
+++ b/Booking.html
@@ -25,7 +25,7 @@
     <div class="form-section">
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSeWYWtWqqDOk9ouAzTrau0kje0EwHVag4TlqI3G4uO-HO4dVw/viewform?embedded=true"
-            width="640" height="1330" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            width="25%" height="100%" frameborder="0" marginheight="0" marginwidth="25%">Loading…</iframe>
     </div>
 </div>
 
